Add ClockIn ClockOut button and list (#3)
* chore: update tsconfig

* feat: Add clockin/clockout + @CurrentUser

* feat: Add records rows

* feat:refactor and improve auth

---------
