# packages/backend/src/_entities/templates/base.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { CreateDateColumn, UpdateDateColumn } from 'typeorm';
+
+export class BaseEntity {
+  @CreateDateColumn()
+  @ApiProperty({ description: 'Creation date' })
+  createdAt: Date;
+
+  @UpdateDateColumn()
+  @ApiProperty({ description: 'Update date' })
+  updatedAt: Date;
+}
